...
    <string name="classification_confidential">"Confidential"</string>
    <string name="attendee_role_chair">"Chair"</string>
    <string name="attendee_role_required_participant">"Required participant"</string>
    <string name="attendee_role_optional_participant">"Optional participant"</string>
    <string name="attendee_role_non_participant">"Non-participant / Info"</string>
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>
    <string name="navigation_drawer_board">"Board"</string>
    <string name="navigation_drawer_synchronization">"Synchronization"</string>
    <string name="navigation_drawer_about">"About / License"</string>
    <string name="navigation_drawer_subtitle">"journals, notes &amp; tasks"</string>
    <string name="navigation_drawer_settings">"Settings"</string>
...
    <string name="list_start_past">"Start in past"</string>
    <string name="list_start_shortly">"Start shortly"</string>
    <string name="list_start_today">"Planned start today"</string>
    <string name="list_start_tomorrow">"Start tomorrow"</string>
    <string name="list_start_inXhours">"Planned start in %d hours"</string>
    <string name="list_start_on_weekday">"Planned start on %s"</string>
    <string name="list_tabitem_journals">"Journals"</string>
    <string name="list_tabitem_notes">"Notes"</string>
    <string name="list_tabitem_todos">"Tasks"</string>
    <string name="list_expand">"Expand"</string>
    <string name="list_dialog_delete_selected_title">Delete selected entries?</string>
    <string name="list_dialog_delete_selected_message">This action deletes all selected entries (%1$d). Are you sure that you want to proceed? This operation cannot be undone!</string>
    <string name="list_quickadd_dialog_summary_description_hint">"Summary/Description"</string>
    <string name="list_quickadd_dialog_summary_description_helper">"The first line is interpreted as summary, the rest as description. Hashtags are interpreted as categories (eg #category)."</string>
    <string name="list_item_recurring">"Recurring entry"</string>
...
    <string name="dialog_delete_done_title">"Delete all done tasks?"</string>
    <string name="dialog_delete_done_message">"Attention: Subtasks are deleted independent of their status if their parent is marked as done. This operation cannot be undone!"</string>
    <string name="edit_dialog_sure_to_delete_message">"Are you sure you want to delete \"%1$s\"?"</string>
    <string name="edit_dialog_sure_to_discard_message">"Are you sure you want to discard this entry? This entry will not be saved."</string>
    <string name="edit_validation_errors_dialog_due_date_before_dtstart">"The Due date cannot be on or before the Start date."</string>
    <string name="edit_fragment_app_permission">"App permission"</string>
    <string name="edit_fragment_app_permission_message">"jtx Board can suggest Attendee data based on your contacts as input values for your entries. Read Permissions on your contacts is needed to enable this feature."</string>
    <!-- fragment_about -->
    <string name="about_tabitem_jtx" translatable="false">"jtx Board"</string>
    <string name="about_tabitem_translations">"Translations"</string>
    <string name="about_tabitem_libraries">"Libraries"</string>
    <string name="about_tabitem_contributors">"Contributors"</string>
    <string name="about_special_thanks">"Special thanks"</string>
    <string name="about_app_version">"Version: %1$s (%2$d)"</string>
    <string name="about_app_codename">"Codename: %1$s"</string>
    <string name="about_app_copyright" translatable="false">"© Techbee e.U."</string>
    <string name="about_app_terms">"Terms &amp; Conditions"</string>
    <string name="about_thanks_ffg">"Special thanks to FFG for their trust and financial support to realize this project."</string>
    <!-- menus -->
    <string name="menu_list_gotodate">"Go to date"</string>
    <string name="menu_list_quick_journal">"Quick Journal"</string>
    <string name="menu_list_quick_note">"Quick Note"</string>
    <string name="menu_list_quick_todo">"Quick Todo"</string>
    <string name="menu_view_share_ics">"Share as .ics"</string>
    <string name="menu_view_copy_as_journal">"Copy as Journal"</string>
    <string name="menu_view_copy_as_todo">"Copy as Todo"</string>
...
