...
    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/davx5"
        android:title="@string/navigation_drawer_sync" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/navigation_drawer_about" />

    <item
        android:id="@+id/nav_donate"
        android:icon="@drawable/ic_money"
...
    <item
        android:id="@+id/nav_buypro"
        android:icon="@drawable/ic_pro"
        android:title="@string/navigation_drawer_buypro" />

    <item
        android:id="@+id/nav_app_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/navigation_drawer_settings" />

    <item android:title="@string/navigation_drawer_news_updates">
        <menu>
            <item
...
