...
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:icon="@drawable/ic_vjournal_note"
                    android:text="Notes" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/todos_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:icon="@drawable/ic_todo"
                    android:text="Todos" />

            </com.google.android.material.tabs.TabLayout>
...


        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="add"
...
