...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_summary_edit_textinputfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage|textCapSentences"
                android:text="@={model.iCalObjectUpdated.summary}"
                android:textStyle="bold"
                tools:text="Summary ... Lorem ipsum dolor sit amet" />
...
